gomicroservices_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: gomicroservices-api-service
spec:
  ports:
  - port: 80
    targetPort: 22222
  selector:
    name: gomicroservices-api-pod
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gomicroservices-api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: gomicroservices-api-pod
    spec:
      containers:
      - name: gomicroservices-api-container
        image: 696251787677.dkr.ecr.us-west-2.amazonaws.com/foxley/gomicroservices_api:latest
        ports:
        - containerPort: 22222
