gomicroservices_frontend-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: gomicroservices-frontend-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
  selector:
    name: gomicroservices-frontend-pod
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gomicroservices-frontend
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: gomicroservices-frontend-pod
    spec:
      containers:
      - name: gomicroservices-frontend-container
        image: 696251787677.dkr.ecr.us-west-2.amazonaws.com/foxley/gomicroservices_frontend-v2:alpha1
        ports:
        - containerPort: 80
