gomicroservices_mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: gomicroservices-mariadb-service
  labels:
    app: mariadb
    role: master
    tier: backend
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mariadb
    role: master
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gomicroservices-mariadb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
        role: master
        tier: backend
    spec:
      containers:
      - name: gomicroservices-mariadb-container
        image: mariadb
        ports:
        - containerPort: 3306
        volumeMounts:
          - mountPath: /data/db
            name: cache-volume
      volumes:
      - name: cache-volume
        emptyDir: { }
