gomicroservices_redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: gomicroservices-redis-service
spec:
  ports:
  - port: 80
    targetPort: 12345
    name: http
  selector:
    name: gomicroservices-redis-pod
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gomicroservices-redis
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: gomicroservices-redis-pod
    spec:
      containers:
      - name: gomicroservices-api-container
        image: 696251787677.dkr.ecr.us-west-2.amazonaws.com/foxley/gomicroservices_api:latest
        ports:
        - containerPort: 12345
