istio_build.yaml
apiVersion: v1
kind: Service
metadata:
  name: gomicroservices-api-service
  labels:
    name: gomicroservices-api-pod
spec:
  ports:
  - port: 80
    targetPort: 22222
    name: http
  selector:
    name: gomicroservices-api-pod
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gomicroservices-api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: gomicroservices-api-pod
    spec:
      containers:
      - name: gomicroservices-api-container
        image: 696251787677.dkr.ecr.us-west-2.amazonaws.com/foxley/gomicroservices_api:latest
        ports:
        - containerPort: 22222
---
apiVersion: v1
kind: Service
metadata:
  name: gomicroservices-gateway-service
  labels:
    name: gomicroservices-gateway-pod
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    name: gomicroservices-gateway-pod
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gomicroservices-gateway
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: gomicroservices-gateway-pod
    spec:
      containers:
      - name: gomicroservices-gateway-container
        image: 696251787677.dkr.ecr.us-west-2.amazonaws.com/foxley/gomicroservices-gateway:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gomicroservices-frontend-service
  labels:
    name: gomicroservices-frontend-pod
spec:
  ports:
  - port: 80
    name: http
  selector:
    name: gomicroservices-frontend-pod
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gomicroservices-frontend
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: gomicroservices-frontend-pod
    spec:
      containers:
      - name: gomicroservices-frontend-container
        image: 696251787677.dkr.ecr.us-west-2.amazonaws.com/foxley/gomicroservices_frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: gomicroservices-frontend-service
          servicePort: 80
      - path: /create
        backend:
          serviceName: gomicroservices-frontend-service
          servicePort: 80
      - path: /404/
        backend:
          serviceName: gomicroservices-frontend-service
          servicePort: 80
      - path: /p/
        backend:
          serviceName: gomicroservices-frontend-service
          servicePort: 80
